--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
           <h1>Daniel Hed</h1>
           <div class="nav-div">
           <li class="nav-item">
-            <a href="https://github.com/dahe3320">
+            <a href="https://github.com/dahe3320" target="_blank">
             <img src="icons/github-logo.png">
           </a>
           </li>
           <li class="nav-item">
-            <a href="https://www.linkedin.com/in/daniel-hed-232536263/">
+            <a href="https://www.linkedin.com/in/daniel-hed-232536263/" target="_blank">
               <img src="icons/linked-in-logo.png">
             </a>
           </li>
